--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
-        "2022-08-02",
-        "2022-07-28",
-        "2022-08-16"
+        "CHAPTER3",
+        "CHAPTER2",
+        "CHAPTER1",
+        "CHAPTER4"
     ]
 }
